--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Roboto Mono Light";
+  font-style: normal;
+  font-weight: 300;
+  src: url("./fonts/RobotoMono-Light.ttf");
+}
+
+@font-face {
+  font-family: "Roboto Mono Regular";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./fonts/RobotoMono-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Roboto Mono Medium";
+  font-style: normal;
+  font-weight: 500;
+  src: url("./fonts/RobotoMono-Medium.ttf");
+}
+
+@font-face {
+  font-family: "Roboto Mono SemiBold";
+  font-style: normal;
+  font-weight: 600;
+  src: url("./fonts/RobotoMono-SemiBold.ttf");
+}
+
+@font-face {
+  font-family: "Roboto Mono Bold";
+  font-style: normal;
+  font-weight: 700;
+  src: url("./fonts/RobotoMono-Bold.ttf");
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
